# vega-firmware

./: Cargo.toml  README.md  build.rs
src/: as7331.rs  ble.rs  bme.rs  main.rs  vega.rs  zmod.rs
src/as7331/: as7331.rs  mod.rs
src/as7331-rs/: Cargo.toml
src/as7331-rs/src/: as7331.rs  lib.rs
src/bme688/: mod.rs
src/bme688-rs/: Cargo.toml  bme.rs  types.rs
src/bme688-rs/src/: bme.rs  lib.rs
src/zmod4510/: commands.rs  mod.rs  types.rs  zmod.rs
src/zmod4510-rs/: Cargo.toml  build.rs
src/zmod4510-rs/src/: commands.rs  lib.rs  types.rs  zmod.rs
