[package]
name = "vega-rs"
version = "0.1.0"
authors = ["tuemb <tu.nguyen@ionmobility.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = {git = "https://github.com/esp-rs/esp-hal", branch = "main", features = ["esp32c6", "embassy-time-timg0", "async", "embassy"] }
embassy-executor    = { version = "0.5.0", features = ["nightly", "integrated-timers"] }
esp-println = { version = "0.9.0", features = ["esp32c6", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
embassy-time        = {version = "0.3.0"}
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
esp-wifi = {git = "https://github.com/TuEmb/esp-hal", branch = "ble_advertising", features = ["async", "esp32c6", "ble", "esp-now"]}
bleps    = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }
as7331-rs = { path = "src/as7331-rs" }
zmod4510-rs = { path = "src/zmod4510-rs" }
bme688-rs = { path = "src/bme688-rs" }

[features]
bme688 = []
as7331 = []
zmod = []


[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[[bin]]
name = "vega-zmod"
path = "src/main.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "vega-bme"
path = "src/bme.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "vega-as7331"
path = "src/as7331.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "ble"
path = "src/ble.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "vega"
path = "src/vega.rs"
test = false
doctest = false
bench = false
